# e2tools

./: .gitignore  .travis-script.sh  .travis.yml  AUTHORS  COPYING  ChangeLog  DEVELOPMENT.md  Doxyfile.in  INSTALL.from-git  Makefile-files  Makefile.am  Makefile.in  NEWS.md  README  README.md  TODO  aclocal.m4  compiler-definitions.h  config.h.in  configure  configure.ac  configure.in  copy.c  copy.h  doxygen-index.md  e2cp.1  e2ln.1  e2ls.1  e2ls.1.in  e2ls.1in  e2mkdir.1  e2rm.1  e2tool-e2cp.c  e2tool-e2cp.h  e2tool-e2ln.c  e2tool-e2ln.h  e2tool-e2ls.c  e2tool-e2ls.h  e2tool-e2mkdir.c  e2tool-e2mkdir.h  (+32 more)
.github/workflows/: main.yml
e2t-m4/: e2t-conditional-cflags.m4  e2t-pkg-check-modules.m4
lib/: .gitignore  Makefile.am  Makefile.in
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
src/: Makefile-files  compiler-definitions.h  e2cp.1  e2mv.1  e2tail.1  e2tool-e2cp.c  e2tool-e2cp.h  e2tool-e2ls.c  e2tool-e2mkdir.c  e2tool-e2mkdir.h  e2tool-e2mv.c  e2tool-e2mv.h  e2tool-e2rm.c  e2tool-e2tail.c  e2tools-toolmap.h  e2tools.c  e2tools.h  elist.c  elist.h  include.am  read.c  util.c  util.h  write.c  write.h
tests/: Makefile-files  include.am  simple-test.sh.in  simple-test.shin
